styles for search

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -6,7 +6,7 @@ $black-color: #111111;
 $dark-purple-color: #1e1823;
 $orange-color: #fd9222;
 $white-color: #ffffff;
-$whet-color: #ffad3b;
+$whet-color: #fafafa;
 
 $sm: 375px;
 $md: 768px;
