--- a/src/assets/_common.scss
+++ b/src/assets/_common.scss
@@ -11,11 +11,7 @@
 }
 body {
   font-family: "Montserrat", sans-serif;
-  background: linear-gradient(
-    90deg,
-    rgba(253, 146, 34, 1) 0%,
-    rgba(0, 35, 255, 1) 100%
-  );
+  background: linear-gradient(90deg, $orange-color, $whet-color);
 }
 
 .container {
@@ -28,6 +24,10 @@ body {
   text-decoration: none;
 }
 
-.main{
+.main {
   margin: 50px 0;
+}
+
+.error-message {
+  margin: 0 10px;
 }
