--- a/src/assets/_search.scss
+++ b/src/assets/_search.scss
@@ -1,5 +1,62 @@
+@import "./variables";
+
 .search-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 20px;
+  background: #0000002a;
+  padding: 10px;
+  border-radius: 15px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.search-input {
+  padding: 10px;
+  border: none;
+  border-radius: 15px;
+  width: 100%;
+  margin-bottom: 10px;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.search-input:focus + .search-results {
+  display: block;
+}
+
+.search-results {
+  display: none;
+  width: 100%;
+  position: relative;
+  margin-top: 10px;
+  min-height: 50px;
+}
+
+.search-result-list {
+  position: absolute;
+  width: 100%;
+  background: #000000bf;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  li {
+    margin: 5px 0;
+    color: $white-color;
+    list-style-type: none;
+    width: max-content;
+    max-width: calc(100% - 50px);
+    padding: 10px;
+    border-radius: 15px;
+    cursor: pointer;
+
+    &:hover {
+      background: $white-color;
+      color: $orange-color;
+    }
+  }
 }
