--- a/src/assets/_city.scss
+++ b/src/assets/_city.scss
@@ -11,6 +11,7 @@
   border-radius: 15px;
   width: 100%;
   padding: 15px;
+  position: relative;
 }
 //CURRENT WEATHER ///////////////////////////////////////////////////////////////
 .current-weather {
@@ -84,5 +85,19 @@
   }
   .temp {
     color: white;
+  }
+}
+
+.favorite-button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 15px;
+  cursor: pointer;
+}
+.active {
+  path:nth-child(3) {
+    fill: red;
+    opacity: 1;
   }
 }
