add confirm modal

--- a/src/assets/_city.scss
+++ b/src/assets/_city.scss
@@ -88,17 +88,63 @@
     color: white;
   }
 }
-
+.controls {
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+}
 .favorite-button {
-  position: absolute;
-  right: 0;
-  top: 0;
-  margin: 15px;
   cursor: pointer;
 }
-.active {
-  path:nth-child(3) {
-    fill: red;
-    opacity: 1;
+.delete-button {
+  cursor: pointer;
+  &:hover g {
+    fill: black;
+  }
+}
+
+.confirm-modal {
+  width: 100vw;
+  height: 100vh;
+  background: #00000060;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.confirm-modal-wrapper {
+  background: #000000bf;
+  padding: 15px;
+  border-radius: 15px;
+  width: 320px;
+  text-align: center;
+  
+}
+
+.confirm-modal-title {
+  color: white;
+  margin-bottom: 10px;
+}
+
+.confirm-modal-btn {
+  border: none;
+  padding: 10px 15px;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.btn-yes {
+  margin-right: 15px;
+  &:hover {
+    background: rgb(16, 252, 16);
+  }
+}
+.btn-no {
+  z-index: 500;
+  &:hover {
+    background: rgba(255, 51, 51, 0.76);
   }
 }
