--- a/src/assets/_city.scss
+++ b/src/assets/_city.scss
@@ -39,6 +39,17 @@
   font-size: 12px;
 }
 
+.day-week {
+}
+.day-button,
+.week-button {
+  border: none;
+  border-radius: 15px;
+  padding: 5px 15px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
 //HOURLY WEATHER ///////////////////////////////////////////////////////////////
 
 .hourly-weather {
@@ -88,6 +99,7 @@
     color: white;
   }
 }
+//controls ////////////////////////////////////////////////////////////////////////////////////
 .controls {
   display: flex;
   justify-content: space-around;
@@ -102,7 +114,7 @@
     fill: black;
   }
 }
-
+//confirm modal////////////////////////////////////////////////////////////////////////////
 .confirm-modal {
   width: 100vw;
   height: 100vh;
@@ -121,7 +133,6 @@
   border-radius: 15px;
   width: 320px;
   text-align: center;
-  
 }
 
 .confirm-modal-title {
