--- a/src/assets/_search.scss
+++ b/src/assets/_search.scss
@@ -48,7 +48,7 @@
   li {
     margin: 5px 0;
     list-style-type: none;
-    width: max-content;
+    width: 100%;
     max-width: calc(100% - 50px);
     cursor: pointer;
     p {
