--- a/src/assets/_header.scss
+++ b/src/assets/_header.scss
@@ -35,7 +35,14 @@
   font-weight: $bold-weight;
 }
 
-.changeLanguage{
+.changeLanguage {
+  padding: 5px 10px;
+  border: 1px solid $dark-purple-color;
+  border-radius: 15px;
   background: none;
   cursor: pointer;
+  transition: all 0.5s ease;
+  &:hover {
+    background: $whet-color;
+  }
 }
